tests/ui/traits/next-solver/supertrait-alias-4.stderr
error: conflicting associated type bindings for `Assoc`
  --> $DIR/supertrait-alias-4.rs:22:13
   |
LL |     let x: &dyn Foo<_, _, Other = ()> = todo!();
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `Assoc` is specified to be `_`
   = note: `Assoc` is also specified to be `_`

error: conflicting associated type bindings for `Assoc`
  --> $DIR/supertrait-alias-4.rs:25:13
   |
LL |     let y: &dyn Foo<i32, u32, Other = ()> = x;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `Assoc` is specified to be `u32`
   = note: `Assoc` is also specified to be `i32`

error: aborting due to 2 previous errors

